Update Block.java